feat(backend): support freeform keys for component and product operations